--- a/orla.html
+++ b/orla.html
@@ -16,11 +16,11 @@
           <table id="tabla_profesores">
 
             <tr>
-              <td><img id="imgp1" src="Gif/profesores/Francisco.gif" title="profesor" /><br>
+              <td><img id="imgp1" src="Gif/profesores/Francisco.gif" title="Victor Pablo Galván Florez" /><br>
                 Francisco Avila</td>
-              <td><img id="imgp2" src="Gif/profesores/Ango.gif" title="profesor" /><br>
+              <td><img id="imgp2" src="Gif/profesores/Ango.gif" title="Julia Cuenca Beteta" /><br>
                 Jose A. Gómez</td>
-              <td><img id="imgp3" src="Gif/profesores/FernandoP.gif" title="profesor" /><br>
+              <td><img id="imgp3" src="Gif/profesores/FernandoP.gif" title="Antonio Luis Lozano Lubián" /><br>
                 Fernando Pérez</td>
               <td><img id="imgp4" src="Gif/profesores/Juana.gif" title="profesor" /><br />
                 Juana Sánchez</td>
@@ -71,6 +71,8 @@
                 Mónica Marroquín Ortiz</td>
               <td><img id="img14" src="Gif/alumnos/Carlos.gif" title="Darío Martínez Vila" /><br />
                 Darío Martínez Vila</td>
+              <td><img id="img14" src="Gif/alumnos/Carlos.gif" title="Jaime Pérez Brotons" /><br />
+                Jaime Pérez Brotons</td>
               <td><img id="img15" src="Gif/alumnos/JoseMaria.gif" title="Jairo Pertegal Carrasco" /><br />
                 Jairo Pertegal Carrasco</td>
 
