--- a/orla.html
+++ b/orla.html
@@ -22,14 +22,12 @@
                 Jose A. Gómez</td>
               <td><img id="imgp3" src="Gif/profesores/FernandoP.gif" title="Antonio Luis Lozano Lubián" /><br>
                 Fernando Pérez</td>
-              <td><img id="imgp4" src="Gif/profesores/Juana.gif" title="profesor" /><br />
+              <td><img id="imgp4" src="Gif/profesores/Juana.gif" title="Cristina Sánchez Gamarro" /><br />
                 Juana Sánchez</td>
-              <td><img id="imgp5" src="Gif/profesores/Luis.gif" title="profesor" /><br>
+              <td><img id="imgp5" src="Gif/profesores/Luis.gif" title="Gloria García Domínguez" /><br>
                 Luis González</td>
-              <td><img id="imgp6" src="Gif/profesores/FernandoV.gif" title="profesor" /><br>
+              <td><img id="imgp6" src="Gif/profesores/FernandoV.gif" title="Rafael del Río Santaella" /><br>
                 Fernando Vargas</td>
-              <td><img id="imgp7" src="Gif/profesores/Manolo.gif" title="profesor" /><br>
-                Manuel Puerto</td>
             </tr>
           </table>
 
