--- a/orla.html
+++ b/orla.html
@@ -82,7 +82,7 @@
 		Víctor Rodríguez</td>
         <td><img id="img18" src="Gif/alumnos/Alejandro.gif" title="Alejandro Rubens Choquet de Isla" /><br />
 		Alejandro Rubens</td>
-        <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="Adrián Zarzuela Aparicio" /><br />
+        <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="Jose Zarzuela Garcia" /><br />
 		Adrián Zarzuela</td>
         
    
