--- a/orla.html
+++ b/orla.html
@@ -17,17 +17,17 @@
 
             <tr>
               <td><img id="imgp1" src="Gif/profesores/Francisco.gif" title="Victor Pablo Galván Florez" /><br>
-                Francisco Avila</td>
+                Victor Pablo Galván Florez</td>
               <td><img id="imgp2" src="Gif/profesores/Ango.gif" title="Julia Cuenca Beteta" /><br>
-                Jose A. Gómez</td>
+                Julia Cuenca Beteta</td>
               <td><img id="imgp3" src="Gif/profesores/FernandoP.gif" title="Antonio Luis Lozano Lubián" /><br>
-                Fernando Pérez</td>
+                Antonio Luis Lozano Lubián</td>
               <td><img id="imgp4" src="Gif/profesores/Juana.gif" title="Cristina Sánchez Gamarro" /><br />
-                Juana Sánchez</td>
+                Cristina Sánchez Gamarro</td>
               <td><img id="imgp5" src="Gif/profesores/Luis.gif" title="Gloria García Domínguez" /><br>
-                Luis González</td>
+                Gloria García Domínguez</td>
               <td><img id="imgp6" src="Gif/profesores/FernandoV.gif" title="Rafael del Río Santaella" /><br>
-                Fernando Vargas</td>
+                Rafael del Río Santaella</td>
             </tr>
           </table>
 
