--- a/orla.html
+++ b/orla.html
@@ -34,70 +34,70 @@
 <table id="tabla_alumnos">
 
             <tr>
-              <td><img id="img0" src="Gif/alumnos/Diana.gif" title="Francisco Gaspar Audino Re" /><br />
+              <td><img id="img0" src="Gif/alumnos/usuario icono.png" title="Francisco Gaspar Audino Re" /><br />
                 Francisco Gaspar Audino Re</td>
-              <td><img id="img2" src="Gif/alumnos/Yolanda.gif" title="Patricia de los Milagros Bueno Ferrer" /><br />
+              <td><img id="img2" src="Gif/alumnos/Patricia.gif" title="Patricia de los Milagros Bueno Ferrer" /><br />
                 Patricia de los Milagros Bueno Ferrer</td>
-              <td><img id="img3" src="Gif/alumnos/Guillermo.gif" title="Jairo Cereceda Berciano" /><br />
+              <td><img id="img3" src="Gif/alumnos/JAIRO-CERECEDA.gif" title="Jairo Cereceda Berciano" /><br />
                 Jairo Cereceda Berciano</td>
-              <td><img id="img4" src="Gif/alumnos/Sergio.gif" title="Manuel Fermin De Sande  Nacarino" /><br />
+              <td><img id="img4" src="Gif/alumnos/MANOLO.gif" title="Manuel Fermin De Sande  Nacarino" /><br />
                 Manuel Fermin De Sande Nacarino</td>
-              <td><img id="img5" src="Gif/alumnos/Javier.gif" title="Ares Domínguez Gil" /><br />
+              <td><img id="img5" src="Gif/alumnos/Ares.gif" title="Ares Domínguez Gil" /><br />
                 Ares Domínguez Gil</td>
             </tr>
 
             <tr>
-              <td><img id="img6" src="Gif/alumnos/JoseAntonio.gif" title="Pablo Galán Villanueva" /><br />
+              <td><img id="img6" src="Gif/alumnos/Pablo.gif" title="Pablo Galán Villanueva" /><br />
                 Pablo Galán Villanueva</td>
-              <td><img id="img7" src="Gif/alumnos/Ignacio.gif" title="Miguel Gallardo Cota" /><br />
+              <td><img id="img7" src="Gif/alumnos/Miguel.gif" title="Miguel Gallardo Cota" /><br />
                 Miguel Gallardo Cota</td>
-              <td><img id="img8" src="Gif/alumnos/AdrianH.gif" title="José María García Valencia" /><br />
+              <td><img id="img8" src="Gif/alumnos/usuario icono.png" title="José María García Valencia" /><br />
                 José María García Valencia</td>
-              <td><img id="img9" src="Gif/alumnos/Claudiu.gif" title="María García Vidal" /><br />
+              <td><img id="img9" src="Gif/alumnos/usuario icono.png" title="María García Vidal" /><br />
                 María García Vidal</td>
-              <td><img id="img10" src="Gif/alumnos/Manuel.gif" title="Rubén Hidalgo García" /><br />
+              <td><img id="img10" src="Gif/alumnos/rubengif.gif" title="Rubén Hidalgo García" /><br />
                 Rubén Hidalgo García</td>
 
             </tr>
 
             <tr>
-              <td><img id="img11" src="Gif/alumnos/AlejandroR.gif" title="Adrián López Galán" /><br />
+              <td><img id="img11" src="Gif/alumnos/Adri.gif" title="Adrián López Galán" /><br />
                 Adrián López Galán</td>
-              <td><img id="img12" src="Gif/alumnos/Enrique.gif" title="Andrés José Marín Pascualvaca" /><br />
+              <td><img id="img12" src="Gif/alumnos/usuario icono.png" title="Andrés José Marín Pascualvaca" /><br />
                 Andrés José Marín Pascualvaca</td>
-              <td><img id="img13" src="Gif/alumnos/JuanCarlos.gif" title="Mónica Marroquín Ortiz" /><br />
+              <td><img id="img13" src="Gif/alumnos/Mónica.gif" title="Mónica Marroquín Ortiz" /><br />
                 Mónica Marroquín Ortiz</td>
-              <td><img id="img14" src="Gif/alumnos/Carlos.gif" title="Darío Martínez Vila" /><br />
+              <td><img id="img14" src="Gif/alumnos/dario.gif" title="Darío Martínez Vila" /><br />
                 Darío Martínez Vila</td>
-              <td><img id="img14" src="Gif/alumnos/Carlos.gif" title="Jaime Pérez Brotons" /><br />
+              <td><img id="img14" src="Gif/alumnos/usuario icono.png" title="Jaime Pérez Brotons" /><br />
                 Jaime Pérez Brotons</td>
-              <td><img id="img15" src="Gif/alumnos/JoseMaria.gif" title="Jairo Pertegal Carrasco" /><br />
+              <td><img id="img15" src="Gif/alumnos/JAIRO-PERTEGAL.gif" title="Jairo Pertegal Carrasco" /><br />
                 Jairo Pertegal Carrasco</td>
 
             </tr>
 
             <tr>
-              <td><img id="img16" src="Gif/alumnos/Diego.gif" title="Roberto Pinilla Nieto" /><br />
+              <td><img id="img16" src="Gif/alumnos/usuario icono.png" title="Roberto Pinilla Nieto" /><br />
                 Roberto Pinilla Nieto</td>
-              <td><img id="img17" src="Gif/alumnos/Victor.gif" title="Sergio Pinto Morales" /><br />
+              <td><img id="img17" src="Gif/alumnos/SergioPinto.gif" title="Sergio Pinto Morales" /><br />
                 Sergio Pinto Morales</td>
-              <td><img id="img18" src="Gif/alumnos/Alejandro.gif" title="Diego Robles Vidal" /><br />
+              <td><img id="img18" src="Gif/alumnos/Diego-Robles-Vidal.gif" title="Diego Robles Vidal" /><br />
                 Diego Robles Vidal</td>
-              <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="María del Carmen Rodríguez Lozano" /><br />
+              <td><img id="img19" src="Gif/alumnos/Maria.gif" title="María del Carmen Rodríguez Lozano" /><br />
                 María del Carmen Rodríguez Lozano</td>
-              <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="Francisco Javier Rodríguez Ruiz" /><br />
+              <td><img id="img19" src="Gif/alumnos/Pacoja-Microondas.gif" title="Francisco Javier Rodríguez Ruiz" /><br />
                 Francisco Javier Rodríguez Ruiz</td>
-              <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="Sergio José Rojas Medina" /><br />
+              <td><img id="img19" src="Gif/alumnos/usuario icono.png" title="Sergio José Rojas Medina" /><br />
                 Sergio José Rojas Medina</td>
-              <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="Luis Carlos Romero Navarro" /><br />
+              <td><img id="img19" src="Gif/alumnos/Luiscarlos.gif" title="Luis Carlos Romero Navarro" /><br />
                 Luis Carlos Romero Navarro</td>
-              <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="Francisco José Sánchez Lloret" /><br />
+              <td><img id="img19" src="Gif/alumnos/FranSanchez.gif" title="Francisco José Sánchez Lloret" /><br />
                 Francisco José Sánchez Lloret</td>
-              <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="José Ramón Valladares González" /><br />
+              <td><img id="img19" src="Gif/alumnos/jose ramon.gif" title="José Ramón Valladares González" /><br />
                 José Ramón Valladares González</td>
-              <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="Juan Manuel Vega Carrillo" /><br />
+              <td><img id="img19" src="Gif/alumnos/juanmaCalvo.gif" title="Juan Manuel Vega Carrillo" /><br />
                 Juan Manuel Vega Carrillo</td>
-              <td><img id="img19" src="Gif/alumnos/AdrianZ.gif" title="José Zarzuela García" /><br />
+              <td><img id="img19" src="Gif/alumnos/Jose-Zarzuela.gif" title="José Zarzuela García" /><br />
                 José Zarzuela García</td>
 
 
